pipeline to scraping in the order of game > sport > event > result

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,8 @@
 export("%>%")
 export(get_events)
 export(get_results)
-export(get_single_results)
+export(get_single_event)
+export(get_single_result)
 export(get_sports)
 importFrom(cli,cli_abort)
 importFrom(dplyr,mutate)
