--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,8 @@
-pandoc: '2.18'
-pkgdown: 2.0.6
+pandoc: 2.19.2
+pkgdown: 2.0.7
 pkgdown_sha: ~
 articles: {}
-last_built: 2023-02-23T10:23Z
+last_built: 2023-02-23T21:39Z
 urls:
   reference: https://rjournal.github.io/rj/reference
   article: https://rjournal.github.io/rj/articles
