--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_single_event)
 export(get_single_result)
 export(get_sports)
 importFrom(cli,cli_abort)
+importFrom(dplyr,desc)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,rowwise)
