--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-.Rproj.user
+.DS_Store
+
+# History files
 .Rhistory
+.Rapp.history
+
+# Session Data files
 .RData
+.RDataTmp
+
+# User-specific files
 .Ruserdata
+
+# RStudio files
+.Rproj.user/
